# libmebo

./: .gitmodules  CONTRIBUTING.md  LICENSE.md  NEWS  README.md  coding_guidelines.md  explainer.md  libmebo_interface.cc  libmebo_interface.h  meson.build  meson_options.txt
.github/workflows/: codeql.yml
docs/: Doxyfile.in  meson.build
src/: meson.build
src/Handlers/: AV1RateControlHandler.cpp  AV1RateControlHandler.hpp  LibMeboControlHandler.cpp  LibMeboControlHandler.hpp  VP8RateControlHandler.cpp  VP8RateControlHandler.hpp  VP9RateControlHandler.cpp  VP9RateControlHandler.hpp  meson.build
src/brc/: meson.build
src/brc/av1/aom_derived/: aom_av1_common.h  aom_av1_ratectrl.c  aom_av1_ratectrl.h  aom_av1_rtc.c  aom_av1_rtc.h  aom_av1_svc_layercontext.cpp  aom_av1_svc_layercontext.h  av1_common.h  av1_ratectrl.c  av1_svc_layercontext.c  av1_svc_layercontext.h  ratectrl_rtc.c  ratectrl_rtc.h
src/brc/av1/aom_derived/lib_header/: aom_codec.h  ratectrl.h  ratectrl_rtc.h
src/brc/av1/aom_derived/lib_header/aom/: aom_decoder.h  aom_encoder.h  aom_frame_buffer.h  aom_image.h  aom_mem.h
src/brc/av1/aom_derived/lib_header/aom/aom_dsp/: aom_dsp_common.h  aom_filter.h  entcode.h  grain_params.h  grain_table.h  odintrin.h  prob.h  pyramid.h  rect.h
src/brc/av1/aom_derived/lib_header/aom/aom_dsp/flow_estimation/: corner_detect.h  flow_estimation.h
src/brc/av1/aom_derived/lib_header/aom/aom_ports/: bitops.h  mem.h
src/brc/av1/aom_derived/lib_header/aom/aom_scale/: yv12config.h
src/brc/av1/aom_derived/lib_header/aom/aom_util/: aom_thread.h  debug_util.h  endian_inl.h
src/brc/av1/aom_derived/lib_header/aom/common/: args_helper.h
src/brc/av1/aom_derived/lib_header/aom/config/: av1_rtcd.h
src/brc/av1/aom_derived/lib_header/aom/internal/: aom_codec_internal.h  aom_image_internal.h
src/brc/av1/aom_derived/lib_header/av1/common/: alloccommon.h  av1_common_int.h  av1_loopfilter.h  av1_txfm.h  blockd.h  common.h  common_data.h  convolve.h  entropy.h  entropymode.h  entropymv.h  enums.h  filter.h  frame_buffers.h  mv.h  quant_common.h  restoration.h  scale.h  seg_common.h  tile_common.h  timing.h
src/brc/vp8/libvpx_derived/: libvpx_vp8_ratectrl.c  libvpx_vp8_ratectrl.cpp  libvpx_vp8_ratectrl.h  libvpx_vp8_rtc.c  libvpx_vp8_rtc.h  ratectrl_rtc.c  ratectrl_rtc.h  vp8_common.h  vp8_ratectrl.c  vp8_ratectrl.h
src/brc/vp9/libvpx_derived/: libvpx_vp9_common.h  libvpx_vp9_picklpf.c  libvpx_vp9_picklpf.h  libvpx_vp9_ratectrl.c  libvpx_vp9_ratectrl.cpp  libvpx_vp9_ratectrl.h  libvpx_vp9_rtc.c  libvpx_vp9_rtc.cpp  libvpx_vp9_rtc.h  libvpx_vp9_svc_layercontext.c  libvpx_vp9_svc_layercontext.cpp  libvpx_vp9_svc_layercontext.h  ratectrl_rtc.c  ratectrl_rtc.h  vp9_common.h  vp9_picklpf.c  vp9_picklpf.h  vp9_ratectrl.c  vp9_ratectrl.h  vp9_svc_layercontext.c  vp9_svc_layercontext.h
src/lib/: RateControlFactory.hpp  libmebo.c  libmebo.cpp  libmebo.h  libmebo.hpp  meson.build
test/: fake-enc-test.c  fake-enc-test.cpp  meson.build
